# xiv-reversal-rs

./: Cargo.toml  README.md
src/: dllmain.rs  lib.rs
src/d3d11/: device.rs  mod.rs  renderctx.rs  swapchain.rs
src/d3d11/hlsl/: shader.hlsl
src/exe/: main.rs
src/ffxiv/: GameInterface.rs  game.rs  mod.rs
src/ffxiv/actors/: ActorTable.rs  _actor.rs  actor.rs  mod.rs  model.rs  skeleton.rs
src/ffxiv/camera/: WorldMatrix.rs  mod.rs
src/hooks/: hooks.rs  mod.rs  present.rs  rendering.rs
src/ktisis/: ktisis.rs  mod.rs
src/ktisis/hooks/: mod.rs  present.rs
src/memory/: mod.rs  scanner.rs  vtable.rs
src/modules/: dxgi.rs  mod.rs
src/process/: memory.rs  mod.rs  module.rs  process.rs
src/process/memory/: SigScanner.rs  helpers.rs  hooks.rs  memory.rs  mod.rs  scanner.rs
src/render/: SkeleOverlay.rs  mod.rs  overlay.rs  structs.rs
src/render/d3d11/: device.rs  mod.rs  renderctx.rs  renderer.rs  shaders.rs
src/render/structs/: buffer.rs  mod.rs  shape.rs  structs.rs
src/structs/: color.rs  mod.rs  vector.rs
