[package]
name = "gpose-plus"
version = "0.1.0"
edition = "2021"

[lib]
name = "gpose_plus"
path = "src/dllmain.rs"
crate-type = ["cdylib"]

[[bin]]
name = "Ktisis"
path = "src/exe/main.rs"

[dependencies]
winapi = { version = "^0.3.9", features = ["std", "everything"] }
libc = { version = "^0.2.126", features = ["use_std", "extra_traits"] }
dll-syringe = { version = "^0.13.1", features = ["into-x86-from-x64"] }
async-std = "^1.12.0"
directx_math = "^0.2.2"
futures = "0.3"
struct_layout = "0.1"